added information to Bruno's profile

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -57,8 +57,8 @@
   position: Lecturer
   email: bruno.yun (at) abdn.ac.uk
   twitter: 
-  website: https://www.abdn.ac.uk/people/bruno.yun
+  website: https://homepages.abdn.ac.uk/bruno.yun/pages/
   github: 
   scholar: 
-  orcid: 
+  orcid: https://orcid.org/0000-0001-9370-3917
   description: 
