added google scholar for bruno

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -59,6 +59,6 @@
   twitter: 
   website: https://homepages.abdn.ac.uk/bruno.yun/pages/
   github: 
-  scholar: 
+  scholar: https://scholar.google.fr/citations?user=QrOqsP4AAAAJ&hl=fr
   orcid: https://orcid.org/0000-0001-9370-3917
   description: 
