Adding my own details.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -6,9 +6,9 @@
   email: rafael.cardoso (at) abdn.ac.uk
   twitter: 
   website: https://rafaelcaue.github.io/
-  github: 
-  scholar: 
-  orcid: 
+  github: rafaelcaue
+  scholar: dh_R4EoAAAAJ
+  orcid: orcid.org/0000-0001-6666-6954
   description: 
 
 - name: Brian Logan
