Updated Felipe's details

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -32,9 +32,9 @@
   email: felipe.meneguzzi (at) abdn.ac.uk
   twitter: 
   website: http://www.meneguzzi.eu/felipe/
-  github: 
-  scholar: 
-  orcid: 
+  github: meneguzzi
+  scholar: uFEbojwAAAAJ
+  orcid: orcid.org/0000-0003-3549-6168
   description: 
   
 - name: Nir Oren
